# jab-scrape

./: README.md
.github/: copilot-instructions.md
_bmad-output/implementation-artifacts/: 1-1-基于-starter-模板初始化项目骨架.md  1-2-手动触发采集任务并生成追溯id.md  1-3-查询任务状态与基础进度.md  1-4-查看任务日志与失败原因.md  1-5-manual-队列处理-重放-跳过.md  mvp-technical-design-job_scrape-2026-03-12.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-13.md  prd.md  (+3 more)
docs/: 原始需求.md
job_scrape/: .env.example  README.md  alembic.ini  pyproject.toml
job_scrape/alembic/: env.py
job_scrape/alembic/versions/: 1f3a2b7c9d10_story_1_2_task_tables.py  51aa0ae6bba7_baseline.py  a2c4e6f8b1d3_story_1_3_add_updated_at_to_tasks.py  a9b8c7d6e5f4_story_3_2_add_seen_fields.py
job_scrape/app/: main.py
job_scrape/app/api/: deps.py
job_scrape/app/api/routes/: api.py  tasks.py
job_scrape/app/api/schemas/: task.py
job_scrape/app/core/: config.py
job_scrape/app/db/: __init__.py  session.py
job_scrape/app/models/: __init__.py  raw_job_posting.py  task.py  task_event.py
job_scrape/app/normalizer/: __init__.py  job_id_extractor.py  lifecycle_service.py  normalization_service.py  url_normalizer.py
job_scrape/app/services/: raw_job_repository.py  task_repository.py  task_service.py
job_scrape/tests/: test_lifecycle_service.py  test_normalization_api.py  test_normalization_service.py  test_raw_job_posting_model.py  test_scrape_task_runner.py  test_story_3_1_regression.py  test_task_create_api.py  test_task_manual_api.py  test_task_query_api.py
(+12 files in other folders)
