[project]
requires-python = ">=3.11"
name = "job_scrape"
version = "0.1.0"
description = "A short description of the project"
authors = [
    { name = "Your name", email = "you@example.com" },
]
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.41.0",
    "sqlalchemy==2.0.48",
    "alembic==1.18.4",
    "pydantic==2.12.5",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "starlette>=0.46.2,<0.47"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "ruff==0.13.0"
]
aws = [
    "mangum>=0.17.0"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]